masterclass page3 alignment and margin correction

--- a/src/MasterClassPage/Page3/Page3.css
+++ b/src/MasterClassPage/Page3/Page3.css
@@ -169,9 +169,19 @@
 .inr_button {
   width: 50%;
 }
+.mobile_view_video_master {
+  display: none;
+}
 @media screen and (max-width: 768px) {
   .info {
     display: none;
+  }
+  .laptop_view_video_master {
+    display: none !important;
+  }
+  .mobile_view_video_master {
+    display: flex;
+    justify-content: space-evenly;
   }
   .mbd_image {
     height: 14rem;
@@ -192,6 +202,7 @@
     font-size: 16px;
   }
   .menu_card {
+    width: 100%;
     height: 200px;
     margin-top: 0%;
   }
@@ -210,7 +221,6 @@
     font-size: 14px;
     font-weight: 300;
     text-align: center;
-    margin: 20px 5px auto 5px;
   }
   .epi {
     text-align: center;
